homelab/argocd/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-allow-internal
  namespace: argocd
spec:
  endpointSelector: {}  # Apply to all pods in argocd namespace
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: argocd
    - fromEntities:
        - host
        - remote-node
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8081"
              protocol: TCP
            - port: "443"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: argocd
    - toEntities:
        - host
        - remote-node
        - world
